[gd_scene load_steps=9 format=3 uid="uid://cviylja22evhq"]

[ext_resource type="Script" uid="uid://dldy02yx8hefq" path="res://Main.gd" id="1_a202f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a202f"]

[sub_resource type="BoxMesh" id="BoxMesh_a202f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_noarx"]
albedo_color = Color(0.4117647, 0.7529412, 0.24705882, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jka67"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i5arm"]
albedo_color = Color(0, 0.6039216, 0.85490197, 1)

[sub_resource type="BoxMesh" id="BoxMesh_a0tk4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r3fl7"]
albedo_color = Color(1, 0.15686275, 0, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_a202f")

[node name="XR_Setup" type="Node3D" parent="."]

[node name="XROrigin3D" type="XROrigin3D" parent="XR_Setup"]

[node name="XRController3D" type="XRController3D" parent="XR_Setup/XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0.5, 0, 0.3659761)
tracker = &"left_hand"

[node name="XRController3D2" type="XRController3D" parent="XR_Setup/XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -0.06351268, 0, 0.36646223)
tracker = &"right_hand"

[node name="RayCast3D" type="RayCast3D" parent="XR_Setup/XROrigin3D/XRController3D2"]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, 0.9468272, -0.0655303)
collision_mask = 2
collide_with_areas = true

[node name="XRCamera3D" type="XRCamera3D" parent="XR_Setup/XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 0.96445143, 0.26426023, 0, -0.26426023, 0.96445143, 0, 0.9468272, 3.160956)

[node name="GreenBtn" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.098562, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GreenBtn"]
shape = SubResource("BoxShape3D_a202f")
debug_color = Color(5.77569e-06, 0.58887106, 0.76170254, 0.41960785)

[node name="MeshInstance3D" type="MeshInstance3D" parent="GreenBtn"]
mesh = SubResource("BoxMesh_a202f")
surface_material_override/0 = SubResource("StandardMaterial3D_noarx")

[node name="BlueBtn" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlueBtn"]
shape = SubResource("BoxShape3D_a202f")
debug_color = Color(5.77569e-06, 0.58887106, 0.76170254, 0.41960785)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BlueBtn"]
mesh = SubResource("BoxMesh_jka67")
surface_material_override/0 = SubResource("StandardMaterial3D_i5arm")

[node name="RedBtn" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="RedBtn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1541523, 0, 0)
mesh = SubResource("BoxMesh_a0tk4")
surface_material_override/0 = SubResource("StandardMaterial3D_r3fl7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RedBtn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1527491, 0, 0)
shape = SubResource("BoxShape3D_a202f")
debug_color = Color(5.77569e-06, 0.58887106, 0.76170254, 0.41960785)
